# scarb-eject

./: Cargo.toml  README.md
src/: main.rs  utils.rs
