[package]
name = "scarb-eject"
version = "1.1.0"
edition = "2021"
rust-version = "1.69"

authors = ["Software Mansion <contact@swmansion.com>"]
description = "Create cairo_project.toml for a given Scarb package."
license = "MIT"
readme = "README.md"
repository = "https://github.com/software-mansion-labs/scarb-eject"

[dependencies]
anyhow = "1.0.71"
cairo-lang-project = "2.9.0-dev.0"
cairo-lang-filesystem = "2.9.0-dev.0"
cairo-lang-utils = "2.9.0-dev.0"
clap = { version = "4.3.0", features = ["derive"] }
scarb-metadata = "1.13.0"
scarb-ui = "0.1.5"
toml = "0.7.4"
serde_json = "1.0.132"
log = "0.4.22"
tracing = "0.1.40"

[profile.release]
lto = true
